--- a/pages/activity/details/index.wxml
+++ b/pages/activity/details/index.wxml
@@ -6,7 +6,7 @@
             {{act_data.slogan}}
         </view>
     </view>
-    <!--内容  -->
+    <!--内容  --> 
     <view class="content">
         <view class="form_area">
             <form bindsubmit='signup' report-submit="true">
@@ -15,27 +15,27 @@
                     <input type="text" name="type" value="{{act_data.user_apply_status==2 ? 1 : 2}}" hidden></input>
                 </view>
                 <view class="activity_manage">
-                    <view class="manage_item">
+                    <view class="manage_item border_bottom">
                         <view class="left">
-                            <text class="team">队长</text>
+                            <text class="team">发起者</text>
                             <view class="team_name team_first">
                                 <image src="{{act_data.founder_user_img}}"></image>
                                 <text>{{act_data.founder_user_nickname}}</text>
                             </view>
                         </view>
                         <view class="right">
-                            <text class="look_member" bindtap='member_card' data-id="{{act_data.id}}">查看队伍名片</text>
+                            <text class="look_member" bindtap='member_card' data-id="{{act_data.id}}">查看名片</text>
                         </view>
                     </view>
                     <view class="manage_item border_bottom">
                         <view class="left">
-                            <text class="team">队员</text>
+                            <text class="team">参与者</text>
                             <view class="team_name team_head">
                                 <image src="{{item}}" wx:for="{{act_data.team_user_img}}"></image>
                             </view>
                         </view>
                         <view class="right">
-                            <text class="member_num">{{act_data.team_user_num}}</text>
+                            <text class="member_num">{{act_data.team_user_num}}人</text>
                         </view>
                     </view>
                 </view>
@@ -84,7 +84,7 @@
                         <text>分享好友</text>
                     </button>
                     <button class="back_btn" bindtap='back_home'>
-                        <image src="/img/hose.png"></image>
+                        <image src="/img/house.png"></image>
                         <text>返回首页</text>
                     </button>
                 </view>
