--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,9 +10,22 @@
             </form>
         </view>
     </view>
-    <!--内容区  -->
+    <!--轮播图  -->
+    <view>
+      <swiper autoplay indicator-dots indicator-active-color="white">
+        <swiper-item>
+         <image mode="widthFix" src="/img/swiper1.png"></image>
+        </swiper-item>
+        <swiper-item>
+         <image mode="widthFix" src="/img/swiper2.png"></image>
+        </swiper-item>
+        <swiper-item>
+         <image mode="widthFix" src="/img/swiper3.png"></image>
+        </swiper-item>       
+      </swiper>
+    </view>
     <!--banner  -->
-    <view class="banner">
+    <!-- <view class="banner">
         <swiper autoplay="true" interval="4000" duration="1000" circular="true" next-margin="30px" previous-margin="22px">
             <block wx:for="{{banner_arr}}">
                 <swiper-item>
@@ -20,19 +33,20 @@
                 </swiper-item>
             </block>
         </swiper>
-    </view>
+    </view> -->
     <view class="content">
         <!--list  -->
         <view class="list_wrap">
-            <text class="title">活动</text>
+            <text class="title">活动与竞赛</text>
             <view class="list" wx:if="{{act_data.length}}">
                 <view class="item" bindtap='tab_actdetails' data-id="{{item.id}}" wx:for="{{act_data}}">
+                  <view wx:if="{{item.type=='activity'}}">
                     <view class="top">
                         <text class="item_title">{{item.activity_title}}</text>
                         <text class="subtitle">{{item.activity_dec}}</text>
                     </view>
                     <view class="pro_img">
-                        <image src="{{item.activity_img}}" mode="aspectFill"></image>
+                        <image src="{{item.activity_img}}" mode="aspectFill" style="max-height:150px;"></image>
                         <text class="tip">{{item.time}}</text>
                     </view>
                     <view class="foot">
@@ -42,11 +56,32 @@
                             <text class="distance">{{item.distance}}</text>
                         </view>
                         <view class="right">
-                            <view class="num">报名人数:
+                            <view class="num">报名人数:20
                                 <template is="wxParse" data="{{wxParseData:replyTemArray[index]}}" />
                             </view>
                         </view>
                     </view>
+                  </view>
+                  <view wx:elif="{{item.type=='match'}}">
+                    <view class="top">
+                        <text class="item_title">{{item.activity_title}}</text>
+                    </view>
+                    <view class="pro_img">
+                        <image src="{{item.activity_img}}" mode="widthFix"></image>
+                        <text class="tip">{{item.time}}</text>
+                    </view>
+                    <view class="foot">
+                        <view class="left_match">
+                            <text class="activity_title_match">主办方：{{item.publish_user_nickname}}</text>
+                        </view>
+                        <!-- <view class="right">
+                            <view class="num">报名人数:20
+                                <template is="wxParse" data="{{wxParseData:replyTemArray[index]}}" />
+                            </view>
+                        </view> -->
+                    </view>
+                  </view>
+                    
                 </view>
             </view>
             <view class="list" wx:else>
@@ -67,4 +102,4 @@
 <view class="toust_mark" wx:if="{{showToast}}">
      <image src="/img/tip.png"></image>
      <text>正在寻找你附近的活动，请稍后~</text>
-</view>
+</view> 
