--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,10 @@
-
+swiper{
+  width: 100%;
+  height: 150px;
+}
+image{
+  width: 100%;
+}
 .search_box{
     background:#FED612;
 }
@@ -12,7 +18,7 @@
 .banner swiper , .banner swiper-item  , .banner image{
     display:block;
     width:100%;
-    height:320rpx;
+    height:100%;
 }
 .banner image{
     margin:0 16rpx;
@@ -37,7 +43,14 @@
     color:#141414;
     font-weight:bold;
 }
-
+.list .item .foot .left_match{
+    box-sizing:border-box;
+    position:relative;
+} 
+.list .item .foot .left_match .activity_title_match{
+    font:24rpx/40rpx '微软雅黑';
+    color:#010101;
+}
 
 .color{
     color:red;
